--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="preference_file_key">SharedPreferences</string>
+    <string name="id_user_key">id_user</string>
+    <string name="eye_part_key">eye_part</string>
+
 </resources>
