--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,11 @@
     <string name="preference_file_key">SharedPreferences</string>
     <string name="id_user_key">id_user</string>
     <string name="eye_part_key">eye_part</string>
+    <string name="insetimg">InsetIMG</string>
+    <string name="chart">CHART</string>
+    <string name="history">HISTORY</string>
+    <string name="profile">PROFILE</string>
+    <string name="aboutus">AboutUs</string>
+    <string name="about_us">About Us</string>
 
 </resources>
