--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,7 @@
     <string name="profile">PROFILE</string>
     <string name="aboutus">AboutUs</string>
     <string name="about_us">About Us</string>
+    <string name="go_back">Go Back</string>
+    <string name="retinal_diabetes_detection_app">Retinal Diabetes Detection App</string>
 
 </resources>
