--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,12 @@
     <string name="go_back">Go Back</string>
     <string name="retinal_diabetes_detection_app">Retinal Diabetes Detection App</string>
     <string name="logout">Logout</string>
+    <string name="are_you_a_researcher_click_here">Are You A Researcher? Click Here!!</string>
+    <string name="no_account_yet_create_one">No account yet? Create one</string>
+    <string name="login">Login</string>
+    <string name="show_password">Show Password</string>
+    <string name="password">Password</string>
+    <string name="card_id">Card ID</string>
+    <string name="chart_by_gender">Chart By Gender</string>
 
 </resources>
